export interface RecipeComponent {
    showDetails(): string;
}
